--- a/network/endpoints/endpoint_data.yaml
+++ b/network/endpoints/endpoint_data.yaml
@@ -362,6 +362,15 @@ Sahara:
             '': /v1.1/%(tenant_id)s
     port: 8386
 
+Tacker:
+    Internal:
+        net_param: TackerApi
+    Public:
+        net_param: Public
+    Admin:
+        net_param: TackerApi
+    port: 9890
+
 Ironic:
     Internal:
         net_param: IronicApi
