--- a/network/service_net_map.j2.yaml
+++ b/network/service_net_map.j2.yaml
@@ -59,6 +59,7 @@ parameters:
       NovaLibvirtNetwork: internal_api
       Ec2ApiNetwork: internal_api
       Ec2ApiMetadataNetwork: internal_api
+      TackerApiNetwork: internal_api
       SwiftStorageNetwork: storage_mgmt
       SwiftProxyNetwork: storage
       SaharaApiNetwork: internal_api
