--- a/network/service_net_map.j2.yaml
+++ b/network/service_net_map.j2.yaml
@@ -41,6 +41,7 @@ parameters:
       MongodbNetwork: internal_api
       CinderApiNetwork: internal_api
       CinderIscsiNetwork: storage
+      CongressApiNetwork: internal_api
       GlanceApiNetwork: storage
       IronicApiNetwork: ctlplane
       IronicNetwork: ctlplane
