Support multiple meter dispatchers in ceilometer config
Currently we only support one dispatcher at a time. But ceilometer
config supports dispatching data to multiple destinations at the
same time. Update the param to support this.

Change-Id: Ie7d854928513239a5903862623df12af1d02b642

--- a/puppet/services/ceilometer-base.yaml
+++ b/puppet/services/ceilometer-base.yaml
@@ -31,9 +31,9 @@ parameters:
     type: string
     hidden: true
   CeilometerMeterDispatcher:
-    default: 'gnocchi'
-    description: Dispatcher to process meter data
-    type: string
+    default: ['gnocchi']
+    description: Comma-seperated list of Dispatcher to process meter data
+    type: comma_delimited_list
     constraints:
     - allowed_values: ['gnocchi', 'database']
   CeilometerEventDispatcher:
