Add glance service support for composable upgrades
Change-Id: I730abee756598c0a23209a53e52cc83e0b815a50
Partially-Implements: blueprint overcloud-upgrades-per-service

--- a/puppet/services/glance-api.yaml
+++ b/puppet/services/glance-api.yaml
@@ -109,3 +109,13 @@ outputs:
         include ::tripleo::profile::base::glance::api
       service_config_settings:
         get_attr: [GlanceBase, role_data, service_config_settings]
+      upgrade_tasks:
+        - name: Stop glance_api service
+          tags: step2
+          service: name=openstack-glance-api state=stopped
+        - name: Sync glance_api DB
+          tags: step5
+          command: glance-manage --config-file=/etc/glance/glance-api.conf db_sync
+        - name: Start glance_api service
+          tags: step6
+          service: name=openstack-glance-api state=started
