--- a/puppet/services/glance-registry.yaml
+++ b/puppet/services/glance-registry.yaml
@@ -100,3 +100,10 @@ outputs:
         include ::tripleo::profile::base::glance::registry
       service_config_settings:
           get_attr: [GlanceBase, role_data, config_settings]
+      upgrade_tasks:
+        - name: Stop glance_registry service
+          tags: step2
+          service: name=openstack-glance-registry state=stopped
+        - name: Start glance_registry service
+          tags: step6
+          service: name=openstack-glance-registry state=started
