Add neutron service support for composable upgrades
Change-Id: I9c6116ddb4475b798876635cbb701214759fa33b
Partially-Implements: blueprint overcloud-upgrades-per-service

--- a/puppet/services/neutron-api.yaml
+++ b/puppet/services/neutron-api.yaml
@@ -160,3 +160,14 @@ outputs:
           neutron::db::mysql::allowed_hosts:
             - '%'
             - "%{hiera('mysql_bind_host')}"
+      upgrade_tasks:
+        - name: Stop neutron_api service
+          tags: step2
+          service: name=neutron-server state=stopped
+        - name: Sync neutron_api DB
+          tags: step5
+          command: neutron-db-manage --config-file /etc/neutron/neutron.conf --config-file /etc/neutron/plugin.ini upgrade head
+        - name: Start neutron_api service
+          tags: step6
+          service: name=neutron-server state=started
+
