--- a/puppet/services/neutron-l3.yaml
+++ b/puppet/services/neutron-l3.yaml
@@ -72,10 +72,17 @@ outputs:
           tripleo.neutron_l3.firewall_rules:
             '106 neutron_l3 vrrp':
               proto: vrrp
-        - 
+        -
           if:
           - external_network_bridge_empty
           - {}
           - neutron::agents::l3::external_network_bridge: {get_param: NeutronExternalNetworkBridge}
       step_config: |
         include tripleo::profile::base::neutron::l3
+      upgrade_tasks:
+        - name: Stop neutron_l3 service
+          tags: step2
+          service: name=neutron-l3-agent state=stopped
+        - name: Start neutron_l3 service
+          tags: step6
+          service: name=neutron-l3-agent state=started
