--- a/puppet/services/neutron-ovs-agent.yaml
+++ b/puppet/services/neutron-ovs-agent.yaml
@@ -113,3 +113,11 @@ outputs:
                 proto: 'gre'
       step_config: |
         include ::tripleo::profile::base::neutron::ovs
+      upgrade_tasks:
+        - name: Stop neutron_ovs_agent service
+          tags: step2
+          service: name=neutron-openvswitch-agent state=stopped
+        - name: Start neutron_ovs_agent service
+          tags: step6
+          service: name=neutron-openvswitch-agent state=started
+
