--- a/puppet/services/neutron-metadata.yaml
+++ b/puppet/services/neutron-metadata.yaml
@@ -75,3 +75,10 @@ outputs:
             neutron::agents::metadata::metadata_ip: "%{hiera('nova_metadata_vip')}"
       step_config: |
         include tripleo::profile::base::neutron::metadata
+      upgrade_tasks:
+        - name: Stop neutron_metadata service
+          tags: step2
+          service: name=neutron-metadata-agent state=stopped
+        - name: Start neutron_metadata service
+          tags: step6
+          service: name=neutron-metadata-agent state=started
