--- a/puppet/services/cinder-api.yaml
+++ b/puppet/services/cinder-api.yaml
@@ -147,3 +147,19 @@ outputs:
           cinder::db::mysql::allowed_hosts:
             - '%'
             - "%{hiera('mysql_bind_host')}"
+      upgrade_tasks:
+        - name: check for cinder running under apache (post upgrade)
+          tags: step2
+          shell: "apachectl -t -D DUMP_VHOSTS | grep -q cinder"
+          register: cinder_apache
+          ignore_errors: true
+        - name: Stop cinder_api service (running under httpd)
+          tags: step2
+          service: name=httpd state=stopped
+          when: "cinder_apache.rc == 0"
+        - name: Stop and disable cinder_api service (pre-upgrade not under httpd)
+          tags: step2
+          service: name=openstack-cinder-api state=stopped enabled=no
+        - name: Start cinder_api service (running under httpd)
+          tags: step6
+          service: name=httpd state=started
