Add heat service support for composable upgrades
Change-Id: Idbbff1e7b3947a8a381ddae172006d724a98a344
Partially-Implements: blueprint overcloud-upgrades-per-service

--- a/puppet/services/heat-engine.yaml
+++ b/puppet/services/heat-engine.yaml
@@ -137,3 +137,13 @@ outputs:
         keystone:
             # This is needed because the keystone profile handles creating the domain
             tripleo::profile::base::keystone::heat_admin_password: {get_param: HeatStackDomainAdminPassword}
+      upgrade_tasks:
+        - name: Stop heat_engine service
+          tags: step2
+          service: name=openstack-heat-engine state=stopped
+        - name: Sync heat_engine DB
+          tags: step5
+          command: heat-manage --config-file /etc/heat/heat.conf db_sync
+        - name: Start heat_engine service
+          tags: step6
+          service: name=openstack-heat-engine state=started
