Add sahara service support for composable upgrades
Change-Id: Icf8e215935bdf299cb792abb29bb5d58c5c312c5
Partially-Implements: blueprint overcloud-upgrades-per-service

--- a/puppet/services/sahara-engine.yaml
+++ b/puppet/services/sahara-engine.yaml
@@ -49,3 +49,10 @@ outputs:
           - get_attr: [SaharaBase, role_data, config_settings]
       step_config: |
         include ::tripleo::profile::base::sahara::engine
+      upgrade_tasks:
+        - name: Stop sahara_engine service
+          tags: step2
+          service: name=openstack-sahara-engine state=stopped
+        - name: Sync sahara_engine DB
+          tags: step5
+          command: sahara-db-manage --config-file /etc/sahara/sahara.conf upgrade head
