--- a/puppet/services/ceilometer-agent-compute.yaml
+++ b/puppet/services/ceilometer-agent-compute.yaml
@@ -48,3 +48,7 @@ outputs:
           - ceilometer::agent::compute::instance_discovery_method: {get_param: InstanceDiscoveryMethod}
       step_config: |
         include ::tripleo::profile::base::ceilometer::agent::compute
+      upgrade_tasks:
+        - name: Stop ceilometer_agent_compute service
+          tags: step2
+          service: name=openstack-ceilometer-compute state=stopped
