--- a/puppet/services/ceilometer-agent-notification.yaml
+++ b/puppet/services/ceilometer-agent-notification.yaml
@@ -49,3 +49,7 @@ outputs:
         get_attr: [CeilometerServiceBase, role_data, config_settings]
       step_config: |
         include ::tripleo::profile::base::ceilometer::agent::notification
+      upgrade_tasks:
+        - name: Stop ceilometer_agent_notification service
+          tags: step2
+          service: name=openstack-ceilometer-notification state=stopped
