--- a/puppet/services/gnocchi-metricd.yaml
+++ b/puppet/services/gnocchi-metricd.yaml
@@ -46,3 +46,7 @@ outputs:
           - gnocchi::metricd::workers: {get_param: GnocchiMetricdWorkers}
       step_config: |
         include ::tripleo::profile::base::gnocchi::metricd
+      upgrade_tasks:
+        - name: Stop gnocchi_metricd service
+          tags: step2
+          service: name=openstack-gnocchi-metricd state=stopped
