--- a/puppet/services/gnocchi-statsd.yaml
+++ b/puppet/services/gnocchi-statsd.yaml
@@ -45,3 +45,7 @@ outputs:
                 proto: 'udp'
       step_config: |
         include ::tripleo::profile::base::gnocchi::statsd
+      upgrade_tasks:
+        - name: Stop gnocchi_statsd service
+          tags: step2
+          service: name=openstack-gnocchi-statsd state=stopped
