--- a/puppet/services/aodh-api.yaml
+++ b/puppet/services/aodh-api.yaml
@@ -85,3 +85,10 @@ outputs:
         include tripleo::profile::base::aodh::api
       metadata_settings:
         get_attr: [ApacheServiceBase, role_data, metadata_settings]
+      upgrade_tasks:
+        - name: Stop aodh_api service (running under httpd)
+          tags: step2
+          service: name=httpd state=stopped
+        - name: Run aodh dbsync
+          tags: step5
+          command: aodh-dbsync
