--- a/puppet/services/aodh-evaluator.yaml
+++ b/puppet/services/aodh-evaluator.yaml
@@ -40,3 +40,7 @@ outputs:
         get_attr: [AodhBase, role_data, config_settings]
       step_config: |
         include tripleo::profile::base::aodh::evaluator
+      upgrade_tasks:
+        - name: Stop aodh_evaluator service
+          tags: step2
+          service: name=openstack-aodh-evaluator state=stopped
