--- a/puppet/services/aodh-listener.yaml
+++ b/puppet/services/aodh-listener.yaml
@@ -40,3 +40,7 @@ outputs:
         get_attr: [AodhBase, role_data, config_settings]
       step_config: |
         include tripleo::profile::base::aodh::listener
+      upgrade_tasks:
+        - name: Stop aodh_listener service
+          tags: step2
+          service: name=openstack-aodh-listener state=stopped
