--- a/puppet/services/ceilometer-agent-central.yaml
+++ b/puppet/services/ceilometer-agent-central.yaml
@@ -54,3 +54,7 @@ outputs:
           - ceilometer_redis_password: {get_param: RedisPassword}
       step_config: |
         include ::tripleo::profile::base::ceilometer::agent::central
+      upgrade_tasks:
+        - name: Stop ceilometer_agent_central service
+          tags: step2
+          service: name=openstack-ceilometer-central state=stopped
