--- a/puppet/services/gnocchi-api.yaml
+++ b/puppet/services/gnocchi-api.yaml
@@ -133,3 +133,10 @@ outputs:
             - "%{hiera('mysql_bind_host')}"
       metadata_settings:
         get_attr: [ApacheServiceBase, role_data, metadata_settings]
+      upgrade_tasks:
+        - name: Stop gnocchi_api service (running under httpd)
+          tags: step2
+          service: name=httpd state=stopped
+        - name: Run gnocchi upgrade
+          tags: step5
+          command: gnocchi-upgrade
