HPELeftHandISCSIDriver support for Cinder
Cinder configuration with HPELeftHandISCSIDriver
for VSA storage

Change-Id: Iaefbf38522069f6c636130e357f19a7fb7d54fe4

--- a/roles_data.yaml
+++ b/roles_data.yaml
@@ -102,6 +102,7 @@
     - OS::TripleO::Services::Zaqar
     - OS::TripleO::Services::OVNDBs
     - OS::TripleO::Services::NeutronML2FujitsuCfab
+    - OS::TripleO::Services::CinderHPELeftHandISCSI
 
 - name: Compute
   CountDefault: 1
