--- a/capabilities-map.yaml
+++ b/capabilities-map.yaml
@@ -404,6 +404,13 @@ topics:
               via puppet
             requires:
               - overcloud-resource-registry-puppet.yaml
+          - file: environments/cinder-hpelefthand-config.yaml
+            title: Cinder HPELeftHandISCSI backend
+            description: >
+              Enables a Cinder HPELeftHandISCSI backend, configured
+              via puppet
+            requires:
+              - overcloud-resource-registry-puppet.yaml
           - file: environments/cinder-eqlx-config.yaml
             title: Cinder EQLX backend
             description: >
