--- a/ci/pingtests/scenario001-multinode.yaml
+++ b/ci/pingtests/scenario001-multinode.yaml
@@ -72,12 +72,22 @@ resources:
       router_id: { get_resource: router }
       subnet_id: { get_resource: private_subnet }
 
+  volume1:
+    type: OS::Cinder::Volume
+    properties:
+      name: Volume1
+      image: { get_param: image }
+      size: 1
+
   server1:
     type: OS::Nova::Server
+    depends_on: volume1
     properties:
       name: Server1
+      block_device_mapping:
+        - device_name: vda
+          volume_id: { get_resource: volume1 }
       flavor: { get_resource: test_flavor }
-      image: { get_param: image }
       key_name: { get_resource: key_pair }
       networks:
         - port: { get_resource: server1_port }
